--- a/apps/client/src/app/global.css
+++ b/apps/client/src/app/global.css
@@ -6,12 +6,17 @@
   html {
     scroll-behavior: smooth;
   }
-  
+
   body {
     @apply antialiased text-gray-900;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply font-lexend-deca;
   }
 }
@@ -102,6 +107,12 @@ body {
   line-height: inherit;
   margin: 0;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 p,
